--- a/ProjectCountries.Prism/ProjectCountries.Prism/ProjectCountries.Prism.csproj
+++ b/ProjectCountries.Prism/ProjectCountries.Prism/ProjectCountries.Prism.csproj
@@ -14,4 +14,10 @@
     <Folder Include="Helpers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Views\SelectCountry.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
