--- a/ProjectCountries.Common/ProjectCountries.Common.csproj
+++ b/ProjectCountries.Common/ProjectCountries.Common.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.11.982" />
   </ItemGroup>
 
 </Project>
