--- a/ProjectCountries.Prism/ProjectCountries.Prism/ProjectCountries.Prism.csproj
+++ b/ProjectCountries.Prism/ProjectCountries.Prism/ProjectCountries.Prism.csproj
@@ -23,6 +23,9 @@
     <EmbeddedResource Update="Views\CountriesList.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="Views\CountryDetail.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
