--- a/ProjectCountries.Prism/ProjectCountries.Prism.Android/ProjectCountries.Prism.Android.csproj
+++ b/ProjectCountries.Prism/ProjectCountries.Prism.Android/ProjectCountries.Prism.Android.csproj
@@ -131,5 +131,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable-xxxhdpi\iconfinder.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\map.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
